Responsive issues fixed.
FIXED:
- Timeline entries not aligned accordingly.
- Upcoming entries not aligned accordingly.

IMPROVED:
- Node line set to left for mobile query.

To Fix:
[ ] - Set editors pick media query same as that of timeline query.
[ ] - Responsive category list table.

--- a/css/partials/_components.scss
+++ b/css/partials/_components.scss
@@ -51,7 +51,7 @@
   }
   
   .c-entry-tag{
-    @include quadrilateral(2,7);
+    height: 2rem;
     width: auto;
   }
   
