--- a/css/partials/_variables.scss
+++ b/css/partials/_variables.scss
@@ -1,7 +1,7 @@
 $bp-1: rgb(232, 74, 87);
 $bp-2: rgb(58, 157, 221);
 $bp: rgb(168, 133, 212);
-$entry-compact: 730px;
+$entry-compact: 530px;
 $entry-timeline: 820px;
 $thumb-l-maxresp: 380px;
 $thumb-m-maxresp: 270px;
